turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:46: error: not found: value SetPos
  SetPos(8,33)
  ^